# ExpertWiki

./: AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
bundles/expertwiki-ai-agent-engineering/: AGENTS.md  access.md  index.md  log.md
bundles/expertwiki-ai-agent-engineering/audits/: audit-20260718-134151.md  audit-20260718-141112.md  audit-20260718-150604.md  audit-20260718-161046.md  index.md
bundles/expertwiki-ai-agent-engineering/claims/: index.md  llm-wiki-compiled-artifact.md  mcp-open-standard.md  openai-file-search-vector-store.md  provenance-supports-trust-assessment.md  stack-overflow-agents-repeated-friction.md
bundles/expertwiki-ai-agent-engineering/raw/: index.md
docs/: ai-second-brain-automation-replacement-plan.zh.md  ai-second-brain-product-experience.md  architecture.md  cli-contract.md  codex-workflows.md  competitive-landscape-llm-wiki-capture-tools.md  competitive-landscape-llm-wiki-capture-tools.zh.md  long-term-principles.md  markdown-bundle-alignment.md  mvp.md  okf-alignment.md  wiki-page-quality-policy.md
scripts/: collect_expertwiki_metrics.py
skills/expertwiki/: SKILL.md
src/expertwiki/: __init__.py  agent_jobs.py  authoring.py  cli.py  compiler.py  concurrency.py  experience.py  linting.py  llm.py  models.py  okf.py  publish.py  server.py  state.py  store.py  viewer.py
src/expertwiki/viewer_assets/: index.html  (+2 more)
tests/: test_agent_jobs.py  test_authoring.py  test_cli.py  test_compiler.py  test_concurrency.py  test_experience.py  test_linting.py  test_publish.py  test_state.py  test_store.py  test_viewer.py
(+28 files in other folders)
