[project]
name = "expertwiki"
version = "0.1.0"
description = "Agent-readable expert encyclopedia and knowledge bundle CLI"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
expertwiki = "expertwiki.cli:main"

[tool.setuptools.package-data]
expertwiki = [
  "viewer_assets/*.html",
  "viewer_assets/*.css",
  "viewer_assets/*.js",
  "viewer_assets/vendor/*.js",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
